--- a/index.html
+++ b/index.html
@@ -2,42 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Collaborative Knit-Purl Stitch</title>
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
-  <script src="sketch.js"></script>
-  <style>
-    body,
-    html {
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;
-    }
-
-    #ui {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      z-index: 10;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 8px;
-      border-radius: 8px;
-    }
-
-    #userInput {
-      width: 300px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Knit a Message</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div id="ui">
-    <form>
-      <input id="userInput" placeholder="Type your message" />
-      <button id="submitBtn">Send</button>
+  <div id="container">
+
+
+    <form id="messageForm">
+      <input type="text" id="userInput" placeholder="Type your message..." required>
+      <button type="submit">Send</button>
     </form>
   </div>
+  <script src="script-index.js"></script>
 </body>
 
 </html>
